# conversation-master

./: .gitignore  HANDOFF.md  README.md  pyproject.toml  requirements.txt
.claude/hooks/: session-start.sh
docs/superpowers/plans/: 2026-07-19-onboarding-daily-feed.md
docs/superpowers/specs/: 2026-07-19-onboarding-daily-feed-design.md
pipeline/: __init__.py  __main__.py  demo.py  difficulty.py  manifest.py  models.py  questions.py  segment.py  topics.py  transcript.py
pipeline/sources/: __init__.py  npr.py  tiktok.py  youtube.py
tests/: test_difficulty.py  test_manifest.py  test_topics.py
web/: app.js  index.html  style.css
