[project]
name = "cliplingo"
version = "0.1.0"
description = "Learn a language by scrolling short clips fetched from YouTube, TikTok, and NPR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2026.6.9",
]

[project.scripts]
cliplingo = "pipeline.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
